tdf#150409 CJK&CTL properties shouldn't be hidden in Style Inspector

Change-Id: I577e4c90eb000e3f55f5be9e14132a4c1d16fe9a